# iconv_qt_poc

./: CMakeLists.txt  README.md  iconvconverter.cpp  iconvconverter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
